# bbs-cli

./: README.md  main.py  pyproject.toml
bbs_cli/: __init__.py  cli.py  client.py  config.py
tests/: test_cli_aliases.py  test_cli_auth_persistence.py  test_config_store.py  test_notifications_flow.py  test_post_history.py
