[project]
name = "bbs-cli"
version = "0.2.0"
description = "Command line client for Team BBS API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
bbs = "bbs_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
